site/static/v0.19/examples/sample-enforce-requests-policy-binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: sample-enforce-requests-policy-binding
spec:
  policyName: sample-enforce-requests-policy
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        kueue-managed: "true"
